Fixed logos sizes on mobile screen

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -130,10 +130,17 @@ $xl: 1920px;
 
 @media only screen and (max-width: $sm) {
   .logo1 {
-    width: 13rem;
+    width: 7rem;
+    height: 4rem;
   }
   .logo2 {
-    width: 12rem;
+    width: 7rem;
+    height: 4rem;
+  }
+
+  .logo3 {
+    width: 5rem;
+    height: 4rem;
   }
 
   .headerMain {
